--- a/src/Nadin.WebAPI/Nadin.WebAPI.csproj
+++ b/src/Nadin.WebAPI/Nadin.WebAPI.csproj
@@ -4,6 +4,10 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<Nullable>disable</Nullable>
+		<UserSecretsId>7e61311a-25f2-43c2-8881-0698a0813d7e</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
